modify about app name

--- a/TraceVisualApp/TraceVisualApp/Views/AboutPage.xaml
+++ b/TraceVisualApp/TraceVisualApp/Views/AboutPage.xaml
@@ -35,7 +35,7 @@
                     <Label.FormattedText>
                         <FormattedString>
                             <FormattedString.Spans>
-                                <Span Text="AppName" FontAttributes="Bold" FontSize="22" />
+                                <Span Text="Xamarin Form Visual Demo" FontAttributes="Bold" FontSize="22" />
                                 <Span Text=" " />
                                 <Span Text="1.0" ForegroundColor="{StaticResource LightTextColor}" />
                             </FormattedString.Spans>
