--- a/TraceVisualApp/TraceVisualApp/Views/AboutPage.xaml
+++ b/TraceVisualApp/TraceVisualApp/Views/AboutPage.xaml
@@ -70,7 +70,8 @@
                 <Button Margin="0,10,0,0" Text="Learn more"
                         Command="{Binding OpenWebCommand}"
                         BackgroundColor="{StaticResource Primary}"
-                        TextColor="White" />
+                        TextColor="White" 
+                        Visual="Material" />
             </StackLayout>
         </ScrollView>
     </Grid>
